# bevy-based-lidar-simulator

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs
src/calculator/: apf.rs  cluster.rs  coordinate_switch.rs  crash_detector.rs  mavlink_args.rs  mod.rs  point_divider.rs  voxel_grid.rs
src/data_reader/: data_reader.rs  io.rs  mod.rs  sensor_detect.rs  structor.rs  structor_to_file.rs  udp_reader.rs
src/octree/: creat_octree.rs  mod.rs  octree.rs
src/visualization/: color_calculator.rs  mod.rs  rendering_components_octree.rs
