[package]
name = "WorldWithoutAnime"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_flycam = "0.15.0"
byteorder = "1.5.0"
csv = "1.3.1"
full = "0.3.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = {version = "1.43.0", features = ["macros", "rt-multi-thread", "full"]}

